--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "author": "",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0",
+    "node": "20.x",
     "npm": ">=8.0.0"
   },
   "dependencies": {
