--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "env": { "NODE_ENV": "production" },
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" }
+  ],
   "functions": {
     "api/index.js": { "maxDuration": 30 }
   },
