Fix Vercel route dest path

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,6 @@
     "api/index.js": { "maxDuration": 30 }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
