Add minimal health function for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,15 @@
   "version": 2,
   "env": { "NODE_ENV": "production" },
   "builds": [
+    { "src": "api/health.js", "use": "@vercel/node" },
     { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "functions": {
+    "api/health.js": { "maxDuration": 30 },
     "api/index.js": { "maxDuration": 30 }
   },
   "routes": [
+    { "src": "/api/health", "dest": "api/health.js" },
     { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
